--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<java-version>1.8</java-version>
 		<logback.version>1.1.3</logback.version>
 		<tocmat.container.servlet.version>7.0.68</tocmat.container.servlet.version>
-		<mysql-connector-java.version>5.1.36</mysql-connector-java.version>
+		<mysql-connector-java.version>5.1.33</mysql-connector-java.version>	<!-- if 5.1.36 < version, connection error/fail -->
 
 		<tomcat.http.port>8081</tomcat.http.port>
 	</properties>
@@ -28,6 +28,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.webmvc.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
 			<version>${spring.webmvc.version}</version>
 		</dependency>
 
@@ -53,6 +59,30 @@
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.7.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.7.3</version>
 		</dependency>
 
 	</dependencies>
