--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -1,5 +1,5 @@
 mysql.driverClassName=com.mysql.jdbc.Driver
-mysql.url=jdbc:mysql://192.168.1.6:3306/
-mysql.databaseName=data
+mysql.url=jdbc:mysql://192.168.1.6:3306/data
 mysql.username=root
 mysql.password=password
+sphinx.url=jdbc:mysql://192.168.1.6:9306?characterEncoding=utf8&maxAllowedPacket=512000
