--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
 		<logback.version>1.1.3</logback.version>
 		<tocmat.container.servlet.version>8.0.33</tocmat.container.servlet.version>
 		<mysql-connector-java.version>5.1.33</mysql-connector-java.version>	<!-- if 5.1.36 < version, connection error/fail -->
-		<tomcat.http.port>8081</tomcat.http.port>
+		<spring-data-jpa.version>1.9.4.RELEASE</spring-data-jpa.version>
+		<hibernate-entitymanager.version>4.3.11.Final</hibernate-entitymanager.version>
+		<tomcat.http.port>8080</tomcat.http.port>
 	</properties>
 
 	<description>Spring Web Application</description>
@@ -37,6 +39,24 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aop</artifactId>
+			<version>${spring.webmvc.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring-data-jpa.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate-entitymanager.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
@@ -57,7 +77,7 @@
 		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
-			<version>1.2.2</version>
+			<version>1.4</version>		<!-- 1.2.2 can't support SerialBlob insert to DB  -->
 		</dependency>
 
 		<dependency>
@@ -82,6 +102,12 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.7.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 
 	</dependencies>
