--- a/src/test/resources/mysql.properties
+++ b/src/test/resources/mysql.properties
@@ -1,6 +1,6 @@
 mysql.driverClassName=com.mysql.jdbc.Driver
 mysql.url=jdbc:mysql://192.168.1.6:3306/
-mysql.databaseName=data
+mysql.databaseName=testdata
 mysql.username=root
 mysql.password=password
 sphinx.url=jdbc:mysql://192.168.1.6:9306?characterEncoding=utf8&maxAllowedPacket=512000
